[package]
name = "conreg-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
anyhow = "1"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
env_logger = "0.11.8"
chrono = "0.4.41"