[package]
name = "conreg-client"
version = "0.1.2"
edition = "2024"
description = "Conreg is a distributed configuration and registration center similar to Nacos, and conreg client is conreg's client SDK"
license = "Apache-2.0"
repository = "https://github.com/xgpxg/conreg"
documentation = "https://docs.rs/conreg-client"

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
anyhow = "1"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
md5 = "0.8.0"
dashmap = "6.1.0"
derive_builder = "0.20.2"
fastrand = "2.3.0"
tracing = { version = "0.1.41", features = ["log"], optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"], optional = true }

[features]
logger = ["tracing", "tracing-subscriber"]