[package]
name = "conreg-cmt"
version = "0.1.0"
edition = "2024"
description = "conreg-cmt is a management tool provided for conreg clusters, used for cluster creation, scaling up, and scaling down."
license = "Apache-2.0"
repository = "https://github.com/xgpxg/conreg"
documentation = "https://docs.rs/conreg-cmt"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros"] }
