[package]
name = "conreg"
version = "0.1.0"
edition = "2024"

[dependencies]
logging = { path = "../lib/logging" }
common = { path = "../lib/common" }
openraft = { version = "0.9.21", features = ["storage-v2", "serde"] }
# rocksdb = { version = "0.23.0", default-features = false, features = ["snappy"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.46.1"
serde_json = "1.0.141"
rand = "0.9.1"
tracing = "0.1.41"
sled = "0.34.7"
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.22", features = ["json"] }
anyhow = "1"
local-ip-address = "0.6.5"
clap = "4.5.46"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
