[package]
name = "conreg-server"
version = "0.1.4"
edition = "2024"

[dependencies]
openraft = { version = "0.9.21", features = ["storage-v2", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.47.1"
serde_json = "1.0.141"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
sled = "0.34.7"
rocket = { version = "0.5.1", features = ["json"] }
reqwest = { version = "0.12.22", features = ["json"] }
anyhow = "1"
clap = "4.5.46"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.8"
idgenerator = "2.0.0"
dashmap = { version = "6.1.0", features = ["serde"] }
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }
bcrypt = "0.17"
moka = { version = "0.12.10", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
strum_macros = "0.27.1"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
